applets/systemtray: fix xembed icon not receiving click events when screen scale > 1 on Wayland

On Wayland, when using "Scaled by application", mapToGlobal will return a scaled position
which is unusable in SNIProxy::sendClick. This fixes the bug by
multiplying the position  by devicePixelRatio.

BUG: 448050
CCBUG: 456168
FIXED-IN: 5.27